[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lockstep-rebase"
dynamic = ["version"]
description = "Automated nested Git submodule rebasing tool with intelligent conflict resolution"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Caleb DeLaBruere", email = "caleb.delabruere@inficon.com"},
]
maintainers = [
    {name = "Caleb DeLaBruere", email = "caleb.delabruere@inficon.com"},
]
keywords = ["git", "rebase", "submodule", "automation", "lockstep", "cli", "fuzzy-search", "bash-style"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Version Control :: Git",
]

[project.urls]
Homepage = "https://github.com/delabrcd/lockstep-rebase"
Repository = "https://github.com/delabrcd/lockstep-rebase.git"
"Bug Tracker" = "https://github.com/delabrcd/lockstep-rebase/issues"
"Source" = "https://github.com/delabrcd/lockstep-rebase"
Changelog = "https://github.com/delabrcd/lockstep-rebase/blob/main/CHANGELOG.md"
Documentation = "https://github.com/delabrcd/lockstep-rebase#readme"

[project.scripts]
lockstep-rebase = "lockstep_rebase.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["lockstep_rebase*"]

[tool.setuptools.dynamic]
version = {attr = "lockstep_rebase._version.VERSION"}

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100
