[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lockstep-rebase"
version = "0.1.0"
description = "A tool for rebasing Git repositories with submodules in lockstep"
authors = [
    {name = "delabrcd", email = "delabrcd@users.noreply.github.com"},
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "GitPython>=3.1.40",
    "click>=8.1.0",
    "colorama>=0.4.6",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=22.3.0",
    "ruff>=0.1.0",
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
]

[project.scripts]
lockstep-rebase = "lockstep_rebase.cli:main"

[project.urls]
"Homepage" = "https://github.com/delabrcd/lockstep-rebase"
"Bug Tracker" = "https://github.com/delabrcd/lockstep-rebase/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "C90", "T20"]
ignore = ["E203", "W503"]

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.ruff.lint.extend-per-file-ignores]
"tests/*" = ["T20"]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100
